k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: niaolemo
  labels:
    name: niaolemo
    app: niaolemo-system
