k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: niaolemo-ingress
  namespace: niaolemo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - api.niaolemo.com
    secretName: niaolemo-tls
  rules:
  - host: api.niaolemo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: niaolemo-core-service
            port:
              number: 80
